# HPE

./: README.md
Doc/: Readme.md
app/: build.gradle
app/src/main/java/com/beraldo/hpe/: CameraActivity.java  CameraConnectionFragment.java  MainActivity.java
app/src/main/java/com/beraldo/hpe/script/: CMake.java  Script.java
app/src/main/java/com/beraldo/hpe/view/: FloatingCameraWindow.java
app/src/main/res/values/: strings.xml
dlib/: build.gradle
dlib/src/main/cpp/: CMakeLists.txt  bitmap2mat2bitmap.cpp  bitmap2mat2bitmap.h  head_pose_estimation.cpp  head_pose_estimation.hpp  imageutils_jni.cpp  jni_head_pose_det.cpp  rgb2yuv.cpp  rgb2yuv.h  yuv2rgb.cpp  yuv2rgb.h
dlib/src/main/cpp/dlib/image_processing/: object_detector.h  scan_fhog_pyramid.h
dlib/src/main/cpp/dlib/threads/: threads_kernel_shared.cpp
dlib/src/main/cpp/log/: logging.cc
dlib/src/main/java/com/beraldo/hpe/dlib/: HeadPoseDetector.java
